[package]
name = "exif-change-rs"
version = "0.1.0"
authors = ["Nat Zimmermann <nat@ntzm.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexiv2 = "0.9.1"
rayon = "1.5.0"
indicatif = { version = "0.15.0", features = ["rayon"] }
