[package]
name = "mapillary-tools-extended"
version = "0.1.0"
authors = ["Nat Zimmermann <nathanielzimmermann@gmail.com>"]
edition = "2018"

[dependencies]
rexiv2 = "0.9.1"
rayon = "1.5.0"
indicatif = { version = "0.15.0", features = ["rayon"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_yaml = "0.8.14"
